--August 10, 2009--
- Fixed StartPage issue: opening/creating a project, when an other one is already open, now
  works.

--August 9, 2009--
- Moved "New SavePoint" buttom from timeline to workflow dock widget. Changed workflow
  signals connection in order to restore the previous tab after setting a SavePoint.
- Added bool GitRunner::hasNewChangesToCommit(), so New SavePoint dialog is triggered only if
  there are uncommitted changes.
- Moved "On Section: <name>" button on the top of TimeLine dock for usability reason, because
  if there are lots of SavePoints, the user has to scroll down each time he want to perfom an
  action Section-related.
- Fixed plasma-containment-studiopreviewer.desktop file; now it doesn't interacts with 
  "Desktop Settings" -> "Desktop Activity" entries.
- Some fixes and coding style fix.

--August 3, 2009--
- When creating a new project, metadata.desktop file is filled with the required fields
- Added setAuthor and setEmail to GitRunner class, so now TimeLine can set that fields
- Review createNewProject code.
- Fixed some krazy warnings.

--July 30, 2009--
- New Project page displays now two fields, Author and Email, defaulted to <username> and
  <username>@none.org. These values are inserted in the header contained int the main script
  file.

--July 29, 2009--
- Fixed saving/reloading layout ( still need some fixing with previewer dimensions btw )
- Now templates are installed under $KDEDIR/share/apps/plasmate/templates
- When creating a new project, PlasMate makes a copy of the corresponding template in the
  working directory, modify its file name and the main class to match the project name. 

--July 26, 2009--
- Added radio button to select the scripting language, connected KLineEdit::returnPressed()
  signal, saved docks position so the next time PlasMate is loaded, it reloads docks previous
  position ( need more fixing btw ).
- Added templated folder, with simple sources for plasmoid and data engines.

--July 25, 2009--